--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -208,7 +208,7 @@ jobs:
       - run:
           name: Run tests
           command: |
-            find ./target/$TARGET -maxdepth 2 -type f -executable -name '*-*' | sh -e
+            find ./target/$TARGET -maxdepth 2 -type f -executable -name '*-*' | sed 's/$/ --nocapture/' | sh -e
       - store_test_results:
           path: ./test-results
 
