--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -413,7 +413,7 @@ services:
         - test-runtime-deps
       network_mode: host
       working_dir: $PWD
-      command: cargo test --all --no-default-features --features docker,default-musl --target x86_64-unknown-linux-musl -- --test-threads 4
+      command: cargo test --all --no-default-features --features docker,default-musl --target x86_64-unknown-linux-musl -- --test-threads 4 --nocapture
 
     test-behavior:
       image: ubuntu:18.04
