--- a/Cargo.toml
+++ b/Cargo.toml
@@ -289,6 +289,7 @@ transforms = [
   "transforms-swimlanes",
   "transforms-tag_cardinality_limit",
   "transforms-tokenizer",
+  "transforms-transaction",
 ]
 transforms-add_fields = []
 transforms-add_tags = []
@@ -316,6 +317,7 @@ transforms-swimlanes = []
 transforms-tag_cardinality_limit = []
 transforms-tokenizer = ["nom"]
 transforms-wasm = ["wasm"]
+transforms-transaction = []
 
 # Sinks
 sinks = [
