--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ tracing-limit = { path = "lib/tracing-limit" }
 # Tokio / Futures
 futures01 = { package = "futures", version = "0.1.25" }
 futures = { version = "0.3", default-features = false, features = ["compat"] }
+pin-project = "0.4"
 tokio01 = { package = "tokio", version = "0.1.22", features = ["io", "uds", "tcp", "rt-full", "experimental-tracing"], default-features = false }
 tokio = { version = "0.2.13", features = ["blocking", "fs", "sync", "macros", "test-util", "rt-core", "io-std"] }
 tokio-codec = "0.1.0"
@@ -74,7 +75,7 @@ rusoto_firehose = { version = "0.41.0", optional = true }
 rusoto_sts = { version = "0.41.0", optional = true }
 
 # Tower
-tower = "0.1.1"
+tower = "0.3"
 
 # Serde
 serde = { version = "1.0.80", features = ["derive"] }
@@ -95,8 +96,9 @@ chrono = "0.4.6"
 rand = "0.5.5"
 regex = "1.3.5"
 bytes = { version = "0.4.10", features = ["serde"] }
+bytes05 = { package = "bytes", version = "0.5" }
 stream-cancel = "0.4.3"
-hyper = "0.12.35"
+hyper = "0.13"
 hyper-openssl = "0.7"
 native-tls = "0.2.3"
 openssl = "0.10.26"
@@ -105,7 +107,8 @@ string_cache = "0.7.3"
 flate2 = "1.0.6"
 structopt = "0.2.16"
 indexmap = {version = "1.0.2", features = ["serde-1"]}
-http = "0.1.14"
+http = "0.2"
+http-body = "0.3"
 typetag = "0.1"
 toml = "0.4"
 syslog = "5"
@@ -128,7 +131,7 @@ grok = { version = "~1.0.1", optional = true }
 nom = { version = "5.0.0", optional = true }
 uuid = { version = "0.7", features = ["serde", "v4"], optional = true }
 exitcode = "1.1.2"
-snafu = { version = "0.4.3", features = ["futures-01"] }
+snafu = { version = "0.6", features = ["futures-01", "futures"] }
 url = "1.7"
 base64 = { version = "0.10.1", optional = true }
 shiplift = { version = "0.6", default-features = false, features = ["tls"], optional = true }
@@ -142,13 +145,13 @@ strip-ansi-escapes = { version = "0.1.0", optional = true }
 colored = "1.9"
 # Forked version to support graceful shutdown with custom tls impl
 warp = { version = "0.1", git = "https://github.com/timberio/warp", branch = "0.1.x", default-features = false, optional = true }
-evmap = { version = "7", features = ["bytes"], optional = true }
+evmap = { version = "9", features = ["bytes"], optional = true }
 logfmt = { version = "0.0.2", optional = true }
 notify = "4.0.14"
 once_cell = "1.3"
 getset = "0.1.0"
 lru = "0.4.3"
-k8s-openapi = { version = "0.5.1", features = ["v1_15"], optional = true }
+k8s-openapi = { version = "0.7", features = ["api", "v1_15"], optional = true }
 bloom = "0.3.2"
 pulsar = { version = "0.3.0", optional = true }
 
