--- a/Cargo.toml
+++ b/Cargo.toml
@@ -99,7 +99,8 @@ bytes = { version = "0.4.10", features = ["serde"] }
 bytes05 = { package = "bytes", version = "0.5" }
 stream-cancel = "0.4.3"
 hyper = "0.13"
-hyper-openssl = "0.7"
+hyper12 = { package = "hyper", version = "0.12" }
+hyper-openssl = "0.8"
 native-tls = "0.2.3"
 openssl = "0.10.26"
 openssl-probe = "0.1.2"
@@ -108,6 +109,7 @@ flate2 = "1.0.6"
 structopt = "0.2.16"
 indexmap = {version = "1.0.2", features = ["serde-1"]}
 http = "0.2"
+http01 = { package = "http", version = "0.1" }
 http-body = "0.3"
 typetag = "0.1"
 toml = "0.4"
@@ -117,7 +119,7 @@ tokio-uds = { version = "0.2.5", optional = true }
 derive_is_enum_variant = "0.1.1"
 leveldb = { git = "https://github.com/timberio/leveldb", optional = true, default-features = false }
 db-key = "0.0.5"
-headers = "0.2.1"
+headers = "0.3"
 rdkafka = { version = "0.23.1", features = ["libz", "ssl", "zstd"], optional = true }
 hostname = "0.1.5"
 seahash = { version = "3.0.6", optional = true }
@@ -145,7 +147,7 @@ strip-ansi-escapes = { version = "0.1.0", optional = true }
 colored = "1.9"
 # Forked version to support graceful shutdown with custom tls impl
 warp = { version = "0.1", git = "https://github.com/timberio/warp", branch = "0.1.x", default-features = false, optional = true }
-evmap = { version = "9", features = ["bytes"], optional = true }
+evmap = { version = "7", features = ["bytes"], optional = true }
 logfmt = { version = "0.0.2", optional = true }
 notify = "4.0.14"
 once_cell = "1.3"
@@ -167,6 +169,7 @@ built = "0.3"
 approx = "0.3.0"
 criterion = "0.3"
 reqwest = "0.9.5"
+# reqwest10 = { package = "reqwest", version  = "0.10" }
 tempfile = "3.0.6"
 libc = "0.2.43"
 libz-sys = "1.0"
