--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -206,10 +206,13 @@ jobs:
             sleep 30 # Splunk crashes when started simultaneously with other services
             docker-compose up -d test-runtime-deps
             sleep 180
+      # - run:
+      #     name: Run tests
+      #     command: |
+      #       find ./target/$TARGET -maxdepth 2 -type f -executable -name '*-*' | sh -e
       - run:
-          name: Run tests
-          command: |
-            find ./target/$TARGET -maxdepth 2 -type f -executable -name '*-*' | sh -e
+            name: Run tests
+            command: cargo test --features docker -- --test-threads 2
       - store_test_results:
           path: ./test-results
 
