--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,7 @@ tracing-limit = { path = "lib/tracing-limit" }
 futures01 = { package = "futures", version = "0.1.25" }
 futures = { version = "0.3", default-features = false, features = ["compat", "io-compat"] }
 tokio01 = { package = "tokio", version = "0.1.22", features = ["io", "uds", "tcp", "rt-full", "experimental-tracing", "codec", "udp"], default-features = false }
-tokio = { version = "0.2.13", features = ["blocking", "fs", "sync", "macros", "test-util", "rt-core", "io-std"] }
+tokio = { version = "0.2.21", features = ["blocking", "fs", "sync", "macros", "test-util", "rt-core", "io-std"] }
 tokio-codec = "0.1.2"
 tokio-openssl = "0.3.0"
 tokio-retry = "0.2.0"
@@ -156,6 +156,7 @@ bloom = "0.3.2"
 pulsar = { version = "0.3.0", optional = true }
 task-compat = "0.1"
 cidr-utils = "0.4.1"
+pin-project = "0.4"
 
 # For WASM
 vector-wasm = { path = "lib/vector-wasm", optional = true }
@@ -163,7 +164,6 @@ lucetc = { git = "https://github.com/bytecodealliance/lucet.git", rev = "d4fc14a
 lucet-runtime = { git = "https://github.com/bytecodealliance/lucet.git", rev = "d4fc14a03bdb99ac83173d27fddf1aca48412a86", optional = true }
 lucet-wasi = { git = "https://github.com/bytecodealliance/lucet.git", rev = "d4fc14a03bdb99ac83173d27fddf1aca48412a86", optional = true }
 anyhow = { version = "1.0.28", optional = true }
-
 
 [target.'cfg(windows)'.dependencies]
 schannel = "0.1"
