--- a/scripts/ci-docker-images/verifier-ubuntu-20-04/Dockerfile
+++ b/scripts/ci-docker-images/verifier-ubuntu-20-04/Dockerfile
@@ -1,8 +1,11 @@
 FROM ubuntu:20.04
 
-RUN apt-get update && \
-  apt-get install -y \
+ARG DEBIAN_FRONTEND="noninteractive"
+
+RUN apt-get update \
+  && apt-get install -y \
   ca-certificates \
   curl \
   git \
-  systemd
+  systemd \
+  && rm -rf /var/lib/apt/lists/*
