Configure tmp dir at docker images
Signed-off-by: MOZGIII <mike-n@narod.ru>

--- a/scripts/ci-docker-images/builder-aarch64-unknown-linux-musl/Dockerfile
+++ b/scripts/ci-docker-images/builder-aarch64-unknown-linux-musl/Dockerfile
@@ -81,16 +81,16 @@ ENV LDFLAGS=""
 RUN mkdir build && \
   cd build && \
   cmake \
-    -DCMAKE_BUILD_TYPE=release \
-    -DLLVM_CONFIG_PATH=$CLANG_PREFIX/bin/llvm-config \
-		-DCOMPILER_RT_DEFAULT_TARGET_TRIPLE=$TARGET \
-    -DCOMPILER_RT_BUILD_SANITIZERS=OFF \
-    -DCOMPILER_RT_BUILD_LIBFUZZER=OFF \
-    -DCOMPILER_RT_BUILD_XRAY=OFF \
-    -DCOMPILER_RT_BUILD_PROFILE=OFF \
-    -DCMAKE_INSTALL_PREFIX=$LIBS_PREFIX \
-    -G Ninja \
-    .. && \
+  -DCMAKE_BUILD_TYPE=release \
+  -DLLVM_CONFIG_PATH=$CLANG_PREFIX/bin/llvm-config \
+  -DCOMPILER_RT_DEFAULT_TARGET_TRIPLE=$TARGET \
+  -DCOMPILER_RT_BUILD_SANITIZERS=OFF \
+  -DCOMPILER_RT_BUILD_LIBFUZZER=OFF \
+  -DCOMPILER_RT_BUILD_XRAY=OFF \
+  -DCOMPILER_RT_BUILD_PROFILE=OFF \
+  -DCMAKE_INSTALL_PREFIX=$LIBS_PREFIX \
+  -G Ninja \
+  .. && \
   cmake --build . --target install
 
 # Compile musl.
@@ -310,3 +310,8 @@ ENV TARGET="$TARGET"
 RUN cargo install --git https://github.com/mmstick/cargo-deb --rev cc879930c06fa22e99f2839bad620ac0d0da879e cargo-deb
 
 RUN apt-get install -y rename cmark-gfm
+
+# Configure temp dir
+ENV TMPDIR=/docker-tmp
+RUN mkdir -p "$TMPDIR" && chmod 0777 "$TMPDIR"
+VOLUME [ "$TMPDIR" ]
