Configure temp dirs in docker images
Signed-off-by: MOZGIII <mike-n@narod.ru>

--- a/scripts/ci-docker-images/checker-shellcheck/Dockerfile
+++ b/scripts/ci-docker-images/checker-shellcheck/Dockerfile
@@ -4,7 +4,12 @@ FROM debian:buster
 
 RUN apt-get update \
   && apt-get install -y \
-      git \
+  git \
   && rm -rf /var/lib/apt/lists/*
 
 COPY --from=shellcheck /bin/shellcheck /usr/local/bin/shellcheck
+
+# Configure temp dir
+ENV TMPDIR=/docker-tmp
+RUN mkdir -p "$TMPDIR" && chmod 0777 "$TMPDIR"
+VOLUME [ "$TMPDIR" ]
