--- a/scripts/ci-docker-images/packager-rpm/Dockerfile
+++ b/scripts/ci-docker-images/packager-rpm/Dockerfile
@@ -8,3 +8,8 @@ RUN yum update -y && \
   make \
   rename \
   rpm-build
+
+# Configure temp dir
+ENV TMPDIR=/docker-tmp
+RUN mkdir -p "$TMPDIR" && chmod 0777 "$TMPDIR"
+VOLUME [ "$TMPDIR" ]
