--- a/scripts/ci-docker-images/checker-markdown/Dockerfile
+++ b/scripts/ci-docker-images/checker-markdown/Dockerfile
@@ -1,2 +1,7 @@
 FROM node:12-alpine
 RUN npm install --global --production markdownlint-cli@0.22
+
+# Configure temp dir
+ENV TMPDIR=/docker-tmp
+RUN mkdir -p "$TMPDIR" && chmod 0777 "$TMPDIR"
+VOLUME [ "$TMPDIR" ]
