--- a/scripts/ci-docker-images/verifier-amazonlinux-2/Dockerfile
+++ b/scripts/ci-docker-images/verifier-amazonlinux-2/Dockerfile
@@ -7,3 +7,8 @@ RUN yum update -y && \
   git \
   systemd \
   tar
+
+# Configure temp dir
+ENV TMPDIR=/docker-tmp
+RUN mkdir -p "$TMPDIR" && chmod 0777 "$TMPDIR"
+VOLUME [ "$TMPDIR" ]
