--- a/scripts/ci-docker-images/verifier-nixos/Dockerfile
+++ b/scripts/ci-docker-images/verifier-nixos/Dockerfile
@@ -6,3 +6,8 @@ RUN gem install bundler -v '~> 2.1.4'
 COPY scripts/ci-docker-images/verifier-nixos/Gemfile Gemfile
 RUN bundle install
 RUN rm Gemfile
+
+# Configure temp dir
+ENV TMPDIR=/docker-tmp
+RUN mkdir -p "$TMPDIR" && chmod 0777 "$TMPDIR"
+VOLUME [ "$TMPDIR" ]
