--- a/scripts/ci-docker-images/verifier-ubuntu-18-04/Dockerfile
+++ b/scripts/ci-docker-images/verifier-ubuntu-18-04/Dockerfile
@@ -6,3 +6,8 @@ RUN apt-get update && \
   curl \
   git \
   systemd
+
+# Configure temp dir
+ENV TMPDIR=/docker-tmp
+RUN mkdir -p "$TMPDIR" && chmod 0777 "$TMPDIR"
+VOLUME [ "$TMPDIR" ]
