Use non-interactive frontend at ubuntu verifiers
Signed-off-by: MOZGIII <mike-n@narod.ru>

--- a/scripts/ci-docker-images/verifier-ubuntu-20-04/Dockerfile
+++ b/scripts/ci-docker-images/verifier-ubuntu-20-04/Dockerfile
@@ -1,11 +1,14 @@
 FROM ubuntu:20.04
 
-RUN apt-get update && \
-  apt-get install -y \
+ARG DEBIAN_FRONTEND="noninteractive"
+
+RUN apt-get update \
+  && apt-get install -y \
   ca-certificates \
   curl \
   git \
-  systemd
+  systemd \
+  && rm -rf /var/lib/apt/lists/*
 
 # Configure temp dir
 ENV TMPDIR=/docker-tmp
