--- a/Cargo.toml
+++ b/Cargo.toml
@@ -156,6 +156,7 @@ lru = "0.4.3"
 bloom = "0.3.2"
 pulsar = { version = "0.3.0", optional = true }
 task-compat = "0.1"
+k8s-openapi = { version = "0.7", features = ["v1_15"], optional = true }
 # For WASM
 vector-wasm = { path = "lib/vector-wasm", optional = true }
 lucetc = { git = "https://github.com/bytecodealliance/lucet.git", rev = "d4fc14a03bdb99ac83173d27fddf1aca48412a86", optional = true }
@@ -228,7 +229,7 @@ wasm-timings = ["wasm"]
 
 # Enables kubernetes dependencies and shared code. Kubernetes-related sources,
 # transforms and sinks should depend on this feature.
-kubernetes = []
+kubernetes = ["k8s-openapi"]
 
 # Sources
 sources = [
